# faster-whisper-base-ar-quran

./: .gitignore  README.md  pyproject.toml
